# readloot

./: .gitignore  Dockerfile  LICENSE  NORTH_STAR.md  PROJECT.md  README.md  ROADMAP.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
backend/app/: __init__.py  config.py  db.py  main.py  schemas.py  utils.py
backend/app/routes/: achievements.py  books.py  catalog.py  dictionary.py  review.py  stats.py  words.py  wotd.py
backend/tests/: test_auth.py  test_catalog.py
docs/report/: phase1.html
examples/sapiens/: 01_the_cognitive_revolution.md  02_the_agricultural_revolution.md
frontend/: package-lock.json  package.json
frontend/app/books/[name]/: page.tsx
frontend/app/discover/: page.tsx
frontend/app/search/: page.tsx
frontend/app/stats/: page.tsx
frontend/components/: navbar.tsx  word-badges.tsx
frontend/lib/: api.ts  types.ts
research/: auto-vocab-research.md  auto-vocab-ux-design.md  gamification-deep-dive.md  growth-and-monetization.md  smart-reading-companion.md  technical-architecture.md
src/readloot/: __init__.py  achievements.py  book_service.py  cli.py  db.py  gamification.py  gutenberg.py  markdown.py  models.py  review_engine.py  sync_engine.py  vocab_extractor.py  word_service.py  wotd.py
src/readloot/data/: book_catalog.json  cefr_levels.json
src/vocabulary_vault/: __init__.py  achievements.py  book_service.py  cli.py  db.py  gamification.py  markdown.py  models.py  review_engine.py  sync_engine.py  wotd.py
tests/: conftest.py  test_book_service.py  test_db.py  test_markdown.py  test_vocab_extractor.py
