[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "readloot"
version = "0.1.0"
description = "A vocabulary RPG that turns reading into a game"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyfiglet>=0.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "hypothesis>=6.0",
]

[project.scripts]
vault = "readloot.cli:vault"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
readloot = ["data/*.json"]
